--- a/Project/eventdetails.html
+++ b/Project/eventdetails.html
@@ -20,13 +20,27 @@
           success:function(data){
 
             console.log(data);
-
             
-          }
+            var pic=document.getElementById("eventpic");
+            pic.src= "Images/" + data[0].image_source;
+
+            var date=document.getElementById("date0");
+            date.innerHTML=data[0].date;
+
+            var location=document.getElementById("location0");
+            location.innerHTML=data[0].location;
+
+            var description=document.getElementById("description0");
+            description.innerHTML=data[0].description;
 
 
-        })
-      }
+          },
+          error:function(xhr,status,error){
+            console.error(status+":",xhr.responseText);
+          },
+
+        });
+      };
 
     </script>
     <style>
@@ -129,7 +143,7 @@
       <div class="row">
         <div class="col-sm-6">
           <a href="images/di.jpg">
-          <img class="event-image" src="images/di.jpg" alt="Event Image">
+          <img class="event-image" id="eventpic" src="" alt="Event Image">
           </a>
           <div class="col-sm-4  btn-register-col">
             <a href="#" class="btn btn-register">Register Now</a>
@@ -139,18 +153,13 @@
         <div class="col-sm-4 event-details">
           <div class="event-date-location">
             <h3 class="event-date-location-header">Date and Location:</h3>
-            <p>Date: <span>April 24, 2023</span></p>
-            <p>Location: <span>Wax Museum, Niagara</span></p>
+            <p>Date: <span id="date0"></span></p>
+            <p>Location: <span id="location0"></span></p>
           </div>
 
           <div class="event-description">
             <h3 class="event-description-header">Event Description:</h3>
-            <p>Step back in time and explore the prehistoric world of dinosaurs at our upcoming museum event! 
-              Experience the thrill of encountering life-sized replicas of the world's most famous dinosaurs, 
-              including the towering T-Rex, the speedy Velociraptor, and the gentle Brachiosaurus. 
-              Learn about their habitats, behaviors, and extinction through interactive exhibits,
-              captivating displays, and informative presentations. Don't miss your chance to embark on a 
-              journey through the Mesozoic Era and discover the secrets of the ancient giants that once roamed the earth!</p>
+            <p id="description0"></p>
           </div>
         </div>  
 
