--- a/Project/quiz.html
+++ b/Project/quiz.html
@@ -21,6 +21,7 @@
         var globalData;
         var correctCounter = 0;
         var questionIndex = 0;
+        var correctAnswer = 0;
 
         document.addEventListener("DOMContentLoaded", function () {
             document.getElementById("option1").addEventListener("click", function() {
@@ -65,13 +66,12 @@
             var option4 = document.getElementById("lblOption4");
 
             question.innerHTML = globalData[questionIndex].question;
-            option1.innerHTML = globalData[questionIndex].answer.answer_1;
-            option2.innerHTML = globalData[questionIndex].answer.answer_2;
-            option3.innerHTML = globalData[questionIndex].answer.answer_3;
-            option4.innerHTML = globalData[questionIndex].answer.answer_4;
+            var options = [option1, option2, option3, option4];
+            assignOptionsRandomly(options);
 
             document.getElementById("submit").addEventListener("click", function() {
-                if(document.getElementById("check1").checked == true) {
+                console.log(("check" + (correctAnswer + 1)));
+                if(document.getElementById(("check" + (correctAnswer + 1))).checked == true) {
                     console.log("nice");
                     correctCounter += 1;
                     document.getElementById("counter").innerHTML = correctCounter;
@@ -79,16 +79,53 @@
                     console.log("wrong");
                 }
 
+                document.getElementById("option1").attributeStyleMap.clear();
+                document.getElementById("option2").attributeStyleMap.clear();
+                document.getElementById("option3").attributeStyleMap.clear();
+                document.getElementById("option4").attributeStyleMap.clear();
                 questionIndex += 1;
+                $('input[name=options]').prop('checked',false);
 
                 //load next question into page
                 question.innerHTML = globalData[questionIndex].question;
-                option1.innerHTML = globalData[questionIndex].answer.answer_1;
-                option2.innerHTML = globalData[questionIndex].answer.answer_2;
-                option3.innerHTML = globalData[questionIndex].answer.answer_3;
-                option4.innerHTML = globalData[questionIndex].answer.answer_4;
+                assignOptionsRandomly(options);
             });
         });
+
+        var assignOptionsRandomly = function(objects) {
+            var randoms = getRandomArray(4);
+            correctAnswer = randoms[0];
+            objects[randoms[0]].innerHTML = globalData[questionIndex].answer.answer_1;
+            objects[randoms[1]].innerHTML = globalData[questionIndex].answer.answer_2;
+            objects[randoms[2]].innerHTML = globalData[questionIndex].answer.answer_3;
+            objects[randoms[3]].innerHTML = globalData[questionIndex].answer.answer_4;
+        }
+
+        function getRandomInt(max) {
+            return Math.floor(Math.random() * max);
+        }
+
+        function getRandomArray(len) { //len = max number
+            var numbers = []; // new empty array
+
+            var count = 0;
+
+            function setInterval() {
+                if (numbers.length < len) {
+                    let num = getRandomInt(len);
+
+                    if (!numbers.includes(num)) {
+                        numbers.push(num);
+                    }
+                    count++;
+
+                    setInterval();
+                }
+            }
+            setInterval();
+
+            return numbers;
+        }
 
         var getQuestionAnswers = function() {
             //get data from database using $.ajax post request from jquery
@@ -99,7 +136,7 @@
                 async: false,
                 success: function(data) {
                     //on success render the returned data
-                    console.log(data);
+                    //console.log(data);
                 },
                 error: function(xhr, status, error) {
                     //on failure to fetch the request write to console
@@ -232,7 +269,7 @@
             </div>
         </div>
 
-        <div class="row col-6">
+        <div class="row justify-content-md-center bg-light">
             <h2>score: </h2><h2 id="counter">0</h2>
         </div>
 	</body>
